--- a/login.html
+++ b/login.html
@@ -9,7 +9,7 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <style>
         body {
-            background-color: #222831;
+            background-color: blue;
             font-family: sans-serif;
             display: flex;
             justify-content: center;
